k8s/registry/registry.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: registry
  name: registry
  namespace: registry
spec:
  replicas: 1
  serviceName: registry
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2.8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: registry
          volumeMounts:
            - name: data
              mountPath: /var/lib/registry
            - name: registry-secrets
              mountPath: /secrets
            - name: certs
              mountPath: /certs
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 2000m
              memory: 1000Mi
      volumes:
        - name: registry-secrets
          secret:
            secretName: registry-secrets
        - name: certs
          secret:
            secretName: registry-cert
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: iscsi-ssd-storage
        resources:
          requests:
            storage: 128Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: registry
  name: registry
  namespace: registry
spec:
  ports:
    - name: registry
      port: 5000
      targetPort: registry
  selector:
    app: registry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-registry-server
  annotations:
    nginx.org/ssl-services: registry
    nginx.org/client-max-body-size: "0"
    nginx.org/proxy-request-buffering: "off"
    nginx.org/proxy-connect-timeout: 3600s
    nginx.org/proxy-send-timeout: 3600s
    nginx.org/proxy-read-timeout: 3600s
  namespace: registry
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - registry.akashisn.info
      secretName: registry-cert
  rules:
    - host: registry.akashisn.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  name: registry
